--- a/RL_01.ipynb
+++ b/RL_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWt3TzgTq2b7WDjQiigkvo",
+      "authorship_tag": "ABX9TyMI/BjxArqXqzcTtXBgt7Tn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -216,9 +216,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print('Hi')"
+      ],
+      "metadata": {
+        "id": "x_zhWRTcuVyT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4d6c6af7-8c3d-406a-8f70-f58e5080aaae"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "x_zhWRTcuVyT"
+        "id": "Drh3C86oyQ80"
       },
       "execution_count": null,
       "outputs": []
